--- a/index.html
+++ b/index.html
@@ -4,109 +4,92 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 		<title>Behind The Mask</title>
-<style>
-  html, body, #canvas {
-    margin: 0;
-    padding: 0;
-    border: 0;
-  }
+		<style>
+html, body, #canvas {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
 
-  html, body {
-    height: 100%;
-  }
+body {
+	color: white;
+	background-color: black;
+	overflow: hidden;
+	touch-action: none;
+}
 
-  body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#canvas {
+	display: block;
+}
 
-    background-color: #000;
-    color: white;
-    overflow: hidden;
-    touch-action: none;
+#canvas:focus {
+	outline: none;
+}
 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  }
+#status, #status-splash, #status-progress {
+	position: absolute;
+	left: 0;
+	right: 0;
+}
 
-  #canvas {
-    display: block;
+#status, #status-splash {
+	top: 0;
+	bottom: 0;
+}
 
-    width: 1280px;
-    height: 720px;
+#status {
+	background-color: #242424;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	visibility: hidden;
+}
 
-    background: #0c1325;
-    border-radius: 24px;
-    box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
-  }
+#status-splash {
+	max-height: 100%;
+	max-width: 100%;
+	margin: auto;
+}
 
-  #canvas:focus {
-    outline: none;
-  }
+#status-splash.show-image--false {
+	display: none;
+}
 
-  #status, #status-splash, #status-progress {
-    position: absolute;
-    left: 0;
-    right: 0;
-  }
+#status-splash.fullsize--true {
+	height: 100%;
+	width: 100%;
+	object-fit: contain;
+}
 
-  #status, #status-splash {
-    top: 0;
-    bottom: 0;
-  }
+#status-splash.use-filter--false {
+	image-rendering: pixelated;
+}
 
-  #status {
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
-  }
+#status-progress, #status-notice {
+	display: none;
+}
 
-  #status-splash {
-    max-height: 100%;
-    max-width: 100%;
-    margin: auto;
-  }
+#status-progress {
+	bottom: 10%;
+	width: 50%;
+	margin: 0 auto;
+}
 
-  #status-splash.show-image--false {
-    display: none;
-  }
-
-  #status-splash.fullsize--true {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-  }
-
-  #status-splash.use-filter--false {
-    image-rendering: pixelated;
-  }
-
-  #status-progress,
-  #status-notice {
-    display: none;
-  }
-
-  #status-progress {
-    bottom: 10%;
-    width: 50%;
-    margin: 0 auto;
-  }
-
-  #status-notice {
-    background-color: #5b3943;
-    border-radius: 0.5rem;
-    border: 1px solid #9b3943;
-    color: #e0e0e0;
-    line-height: 1.3;
-    margin: 0 2rem;
-    padding: 1rem;
-    text-align: center;
-    z-index: 1;
-  }
-</style>
-
+#status-notice {
+	background-color: #5b3943;
+	border-radius: 0.5rem;
+	border: 1px solid #9b3943;
+	color: #e0e0e0;
+	font-family: 'Noto Sans', 'Droid Sans', Arial, sans-serif;
+	line-height: 1.3;
+	margin: 0 2rem;
+	overflow: hidden;
+	padding: 1rem;
+	text-align: center;
+	z-index: 1;
+}
+		</style>
 		<link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
 <link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
 <script src="coi-serviceworker.js"></script>
@@ -128,7 +111,7 @@
 
 		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":1,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":6293992,"index.wasm":38034280},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":1,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":6296140,"index.wasm":38034280},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
