--- a/index.html
+++ b/index.html
@@ -4,97 +4,149 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 		<title>Behind The Mask</title>
-		<style>
-html, body, #canvas {
-	margin: 0;
-	padding: 0;
-	border: 0;
-}
+<style>
+  :root {
+    --page-bg: #ddd3c1;
+    --canvas-bg: #0c1325;
+  }
 
-body {
-	color: white;
-	background-color: black;
-	overflow: hidden;
-	touch-action: none;
-}
+  html, body, #canvas {
+    margin: 0;
+    padding: 0;
+    border: 0;
+  }
 
-#canvas {
-	display: block;
-}
+  html, body {
+    height: 100%;
+  }
 
-#canvas:focus {
-	outline: none;
-}
+  body {
+    /* Center the game */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-#status, #status-splash, #status-progress {
-	position: absolute;
-	left: 0;
-	right: 0;
-}
+    background-color: var(--page-bg);
+    color: white;
+    overflow: hidden;
+    touch-action: none;
 
-#status, #status-splash {
-	top: 0;
-	bottom: 0;
-}
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  }
 
-#status {
-	background-color: #242424;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	visibility: hidden;
-}
+  #canvas {
+    display: block;
 
-#status-splash {
-	max-height: 100%;
-	max-width: 100%;
-	margin: auto;
-}
+    /* Fixed canvas size */
+    width: 1280px;
+    height: 720px;
 
-#status-splash.show-image--false {
-	display: none;
-}
+    background: var(--canvas-bg);
+    border-radius: 24px;
+    box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
+  }
 
-#status-splash.fullsize--true {
-	height: 100%;
-	width: 100%;
-	object-fit: contain;
-}
+  #canvas:focus {
+    outline: none;
+  }
 
-#status-splash.use-filter--false {
-	image-rendering: pixelated;
-}
+  /* Floating button */
+  .dossier-btn {
+    position: fixed;
+    top: 20px;
+    left: 20px;
 
-#status-progress, #status-notice {
-	display: none;
-}
+    background: #f7e0c3;
+    color: #4f3a30;
+    padding: 8px 16px;
+    border-radius: 10px;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 14px;
+    border: 1px solid #e2c59d;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.25);
 
-#status-progress {
-	bottom: 10%;
-	width: 50%;
-	margin: 0 auto;
-}
+    transition: 0.15s ease;
+    z-index: 9999;
+  }
 
-#status-notice {
-	background-color: #5b3943;
-	border-radius: 0.5rem;
-	border: 1px solid #9b3943;
-	color: #e0e0e0;
-	font-family: 'Noto Sans', 'Droid Sans', Arial, sans-serif;
-	line-height: 1.3;
-	margin: 0 2rem;
-	overflow: hidden;
-	padding: 1rem;
-	text-align: center;
-	z-index: 1;
-}
-		</style>
+  .dossier-btn:hover {
+    background: #ffe8c6;
+    transform: translateY(-2px);
+  }
+
+  /* Loading overlay */
+  #status, #status-splash, #status-progress {
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
+
+  #status, #status-splash {
+    top: 0;
+    bottom: 0;
+  }
+
+  #status {
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+  }
+
+  #status-splash {
+    max-height: 100%;
+    max-width: 100%;
+    margin: auto;
+  }
+
+  #status-splash.show-image--false {
+    display: none;
+  }
+
+  #status-splash.fullsize--true {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
+
+  #status-splash.use-filter--false {
+    image-rendering: pixelated;
+  }
+
+  #status-progress, #status-notice {
+    display: none;
+  }
+
+  #status-progress {
+    bottom: 10%;
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  #status-notice {
+    background-color: #5b3943;
+    border-radius: 0.5rem;
+    border: 1px solid #9b3943;
+    color: #e0e0e0;
+    font-family: 'Noto Sans', 'Droid Sans', Arial, sans-serif;
+    line-height: 1.3;
+    margin: 0 2rem;
+    overflow: hidden;
+    padding: 1rem;
+    text-align: center;
+    z-index: 1;
+  }
+</style>
+
 		<link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
 <link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
 <script src="coi-serviceworker.js"></script>
 	</head>
 	<body>
+		<a href="dossier.html" class="dossier-btn">Dossier</a>
 		<canvas id="canvas">
 			Your browser does not support the canvas tag.
 		</canvas>
