--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 		<title>Behind The Mask</title>
-<style>
+		<style>
   :root {
     --page-bg: #ddd3c1;
     --canvas-bg: #0c1325;
@@ -140,13 +140,17 @@
     z-index: 1;
   }
 </style>
-
 		<link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
 <link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
 <script src="coi-serviceworker.js"></script>
 	</head>
 	<body>
-		<a href="dossier.html" class="dossier-btn">Dossier</a>
+    <a
+      href="dossier.html"
+      class="dossier-btn"
+      target="_blank"
+      rel="noopener"
+    >Dossier</a>
 		<canvas id="canvas">
 			Your browser does not support the canvas tag.
 		</canvas>
@@ -163,7 +167,7 @@
 
 		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":1,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":6296140,"index.wasm":38034280},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":1,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":6333132,"index.wasm":38034280},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
