--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
@@ -10,156 +9,123 @@
     --page-bg: #ddd3c1;
     --canvas-bg: #0c1325;
   }
-=======
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-    <title>Behind The Mask</title>
->>>>>>> c93e1b665441ab29ab5915e042de2973fe62b2d4
 
-    <style>
-      :root {
-        --page-bg: #fffaf0;
-        --canvas-bg: #0c1325;
-      }
+  html, body, #canvas {
+    margin: 0;
+    padding: 0;
+    border: 0;
+  }
 
-      html, body, #canvas {
-        margin: 0;
-        padding: 0;
-        border: 0;
-      }
+  html, body {
+    height: 100%;
+  }
 
-      html, body {
-        height: 100%;
-      }
+  body {
+    /* Center the game */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-      body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    background-color: var(--page-bg);
+    color: white;
+    overflow: hidden;
+    touch-action: none;
 
-        background-color: var(--page-bg);
-        color: white;
-        overflow: hidden;
-        touch-action: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  }
 
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      }
+  #canvas {
+    display: block;
 
-      #canvas {
-        display: block;
+    /* Fixed canvas size */
+    width: 1280px;
+    height: 720px;
 
-        width: 1280px;
-        height: 720px;
+    background: var(--canvas-bg);
+    border-radius: 24px;
+    box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
+  }
 
-        background: var(--canvas-bg);
-        border-radius: 24px;
-        box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
-      }
+  #canvas:focus {
+    outline: none;
+  }
 
-      #canvas:focus {
-        outline: none;
-      }
+  /* Floating button */
+  .dossier-btn {
+    position: fixed;
+    top: 20px;
+    left: 20px;
 
-      /* Floating button (opens in new tab so game state is preserved) */
-	.dossier-btn {
-	  position: fixed;
-	  top: 20px;
-	  left: 20px;
-	
-	  background: #fffaf0;
-	  color: #4f3a30;
-	  padding: 8px 16px;
-	  border-radius: 10px;
-	
-	  font-weight: 600;
-	  text-decoration: none;
-	  font-size: 14px;
-	
-	  border: 2px solid #979081; /* slightly thicker border */
-	  box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-	
-	  transition: 0.15s ease;
-	  z-index: 9999;
-	}
-	
-	.dossier-btn:hover {
-	  background: #fffdf7;
-	  transform: translateY(-2px);
-	}
+    background: #f7e0c3;
+    color: #4f3a30;
+    padding: 8px 16px;
+    border-radius: 10px;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 14px;
+    border: 1px solid #e2c59d;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.25);
 
-      /* Loading overlay */
-      #status, #status-splash, #status-progress {
-        position: absolute;
-        left: 0;
-        right: 0;
-      }
+    transition: 0.15s ease;
+    z-index: 9999;
+  }
 
-      #status, #status-splash {
-        top: 0;
-        bottom: 0;
-      }
+  .dossier-btn:hover {
+    background: #ffe8c6;
+    transform: translateY(-2px);
+  }
 
-      #status {
-        background-color: rgba(0, 0, 0, 0.8);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        visibility: hidden;
-      }
+  /* Loading overlay */
+  #status, #status-splash, #status-progress {
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
 
-      #status-splash {
-        max-height: 100%;
-        max-width: 100%;
-        margin: auto;
-      }
+  #status, #status-splash {
+    top: 0;
+    bottom: 0;
+  }
 
-      #status-splash.show-image--false {
-        display: none;
-      }
+  #status {
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+  }
 
-      #status-splash.fullsize--true {
-        height: 100%;
-        width: 100%;
-        object-fit: contain;
-      }
+  #status-splash {
+    max-height: 100%;
+    max-width: 100%;
+    margin: auto;
+  }
 
-      #status-splash.use-filter--false {
-        image-rendering: pixelated;
-      }
+  #status-splash.show-image--false {
+    display: none;
+  }
 
-      #status-progress, #status-notice {
-        display: none;
-      }
+  #status-splash.fullsize--true {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
 
-      #status-progress {
-        bottom: 10%;
-        width: 50%;
-        margin: 0 auto;
-      }
+  #status-splash.use-filter--false {
+    image-rendering: pixelated;
+  }
 
-      #status-notice {
-        background-color: #5b3943;
-        border-radius: 0.5rem;
-        border: 1px solid #9b3943;
-        color: #e0e0e0;
-        font-family: 'Noto Sans', 'Droid Sans', Arial, sans-serif;
-        line-height: 1.3;
-        margin: 0 2rem;
-        overflow: hidden;
-        padding: 1rem;
-        text-align: center;
-        z-index: 1;
-      }
-    </style>
+  #status-progress, #status-notice {
+    display: none;
+  }
 
-    <link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
-    <link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
-    <script src="coi-serviceworker.js"></script>
-  </head>
+  #status-progress {
+    bottom: 10%;
+    width: 50%;
+    margin: 0 auto;
+  }
 
-<<<<<<< HEAD
   #status-notice {
     background-color: #5b3943;
     border-radius: 0.5rem;
@@ -179,143 +145,132 @@
 <script src="coi-serviceworker.js"></script>
 	</head>
 	<body>
-=======
-  <body>
->>>>>>> c93e1b665441ab29ab5915e042de2973fe62b2d4
     <a
       href="dossier.html"
       class="dossier-btn"
       target="_blank"
       rel="noopener"
     >Dossier</a>
-<<<<<<< HEAD
 		<canvas id="canvas">
 			Your browser does not support the canvas tag.
 		</canvas>
-=======
 
-    <canvas id="canvas">
-      Your browser does not support the canvas tag.
-    </canvas>
->>>>>>> c93e1b665441ab29ab5915e042de2973fe62b2d4
+		<noscript>
+			Your browser does not support JavaScript.
+		</noscript>
 
-    <noscript>
-      Your browser does not support JavaScript.
-    </noscript>
+		<div id="status">
+			<img id="status-splash" class="show-image--true fullsize--true use-filter--true" src="index.png" alt="">
+			<progress id="status-progress"></progress>
+			<div id="status-notice"></div>
+		</div>
 
-    <div id="status">
-      <img id="status-splash" class="show-image--true fullsize--true use-filter--true" src="index.png" alt="">
-      <progress id="status-progress"></progress>
-      <div id="status-notice"></div>
-    </div>
-
-<<<<<<< HEAD
 		<script src="index.js"></script>
 		<script>
 const GODOT_CONFIG = {"args":[],"canvasResizePolicy":1,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":6333132,"index.wasm":38034280},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4};
-=======
-    <script src="index.js"></script>
-    <script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":1,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":6296140,"index.wasm":38034280},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4};
->>>>>>> c93e1b665441ab29ab5915e042de2973fe62b2d4
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
-  const statusOverlay = document.getElementById('status');
-  const statusProgress = document.getElementById('status-progress');
-  const statusNotice = document.getElementById('status-notice');
+	const statusOverlay = document.getElementById('status');
+	const statusProgress = document.getElementById('status-progress');
+	const statusNotice = document.getElementById('status-notice');
 
-  let initializing = true;
-  let statusMode = '';
+	let initializing = true;
+	let statusMode = '';
 
-  function setStatusMode(mode) {
-    if (statusMode === mode || !initializing) {
-      return;
-    }
-    if (mode === 'hidden') {
-      statusOverlay.remove();
-      initializing = false;
-      return;
-    }
-    statusOverlay.style.visibility = 'visible';
-    statusProgress.style.display = mode === 'progress' ? 'block' : 'none';
-    statusNotice.style.display = mode === 'notice' ? 'block' : 'none';
-    statusMode = mode;
-  }
+	function setStatusMode(mode) {
+		if (statusMode === mode || !initializing) {
+			return;
+		}
+		if (mode === 'hidden') {
+			statusOverlay.remove();
+			initializing = false;
+			return;
+		}
+		statusOverlay.style.visibility = 'visible';
+		statusProgress.style.display = mode === 'progress' ? 'block' : 'none';
+		statusNotice.style.display = mode === 'notice' ? 'block' : 'none';
+		statusMode = mode;
+	}
 
-  function setStatusNotice(text) {
-    while (statusNotice.lastChild) {
-      statusNotice.removeChild(statusNotice.lastChild);
-    }
-    const lines = text.split('\n');
-    lines.forEach((line) => {
-      statusNotice.appendChild(document.createTextNode(line));
-      statusNotice.appendChild(document.createElement('br'));
-    });
-  }
+	function setStatusNotice(text) {
+		while (statusNotice.lastChild) {
+			statusNotice.removeChild(statusNotice.lastChild);
+		}
+		const lines = text.split('\n');
+		lines.forEach((line) => {
+			statusNotice.appendChild(document.createTextNode(line));
+			statusNotice.appendChild(document.createElement('br'));
+		});
+	}
 
-  function displayFailureNotice(err) {
-    console.error(err);
-    if (err instanceof Error) {
-      setStatusNotice(err.message);
-    } else if (typeof err === 'string') {
-      setStatusNotice(err);
-    } else {
-      setStatusNotice('An unknown error occurred.');
-    }
-    setStatusMode('notice');
-    initializing = false;
-  }
+	function displayFailureNotice(err) {
+		console.error(err);
+		if (err instanceof Error) {
+			setStatusNotice(err.message);
+		} else if (typeof err === 'string') {
+			setStatusNotice(err);
+		} else {
+			setStatusNotice('An unknown error occurred.');
+		}
+		setStatusMode('notice');
+		initializing = false;
+	}
 
-  const missing = Engine.getMissingFeatures({
-    threads: GODOT_THREADS_ENABLED,
-  });
+	const missing = Engine.getMissingFeatures({
+		threads: GODOT_THREADS_ENABLED,
+	});
 
-  if (missing.length !== 0) {
-    if (GODOT_CONFIG['serviceWorker'] && GODOT_CONFIG['ensureCrossOriginIsolationHeaders'] && 'serviceWorker' in navigator) {
-      let serviceWorkerRegistrationPromise;
-      try {
-        serviceWorkerRegistrationPromise = navigator.serviceWorker.getRegistration();
-      } catch (err) {
-        serviceWorkerRegistrationPromise = Promise.reject(new Error('Service worker registration failed.'));
-      }
-      Promise.race([
-        serviceWorkerRegistrationPromise.then((registration) => {
-          if (registration != null) {
-            return Promise.reject(new Error('Service worker already exists.'));
-          }
-          return registration;
-        }).then(() => engine.installServiceWorker()),
-        new Promise((resolve) => {
-          setTimeout(() => resolve(), 2000);
-        }),
-      ]).then(() => {
-        window.location.reload();
-      }).catch((err) => {
-        console.error('Error while registering service worker:', err);
-      });
-    } else {
-      const missingMsg = 'Error\nThe following features required to run Godot projects on the Web are missing:\n';
-      displayFailureNotice(missingMsg + missing.join('\n'));
-    }
-  } else {
-    setStatusMode('progress');
-    engine.startGame({
-      'onProgress': function (current, total) {
-        if (current > 0 && total > 0) {
-          statusProgress.value = current;
-          statusProgress.max = total;
-        } else {
-          statusProgress.removeAttribute('value');
-          statusProgress.removeAttribute('max');
-        }
-      },
-    }).then(() => {
-      setStatusMode('hidden');
-    }, displayFailureNotice);
-  }
+	if (missing.length !== 0) {
+		if (GODOT_CONFIG['serviceWorker'] && GODOT_CONFIG['ensureCrossOriginIsolationHeaders'] && 'serviceWorker' in navigator) {
+			let serviceWorkerRegistrationPromise;
+			try {
+				serviceWorkerRegistrationPromise = navigator.serviceWorker.getRegistration();
+			} catch (err) {
+				serviceWorkerRegistrationPromise = Promise.reject(new Error('Service worker registration failed.'));
+			}
+			// There's a chance that installing the service worker would fix the issue
+			Promise.race([
+				serviceWorkerRegistrationPromise.then((registration) => {
+					if (registration != null) {
+						return Promise.reject(new Error('Service worker already exists.'));
+					}
+					return registration;
+				}).then(() => engine.installServiceWorker()),
+				// For some reason, `getRegistration()` can stall
+				new Promise((resolve) => {
+					setTimeout(() => resolve(), 2000);
+				}),
+			]).then(() => {
+				// Reload if there was no error.
+				window.location.reload();
+			}).catch((err) => {
+				console.error('Error while registering service worker:', err);
+			});
+		} else {
+			// Display the message as usual
+			const missingMsg = 'Error\nThe following features required to run Godot projects on the Web are missing:\n';
+			displayFailureNotice(missingMsg + missing.join('\n'));
+		}
+	} else {
+		setStatusMode('progress');
+		engine.startGame({
+			'onProgress': function (current, total) {
+				if (current > 0 && total > 0) {
+					statusProgress.value = current;
+					statusProgress.max = total;
+				} else {
+					statusProgress.removeAttribute('value');
+					statusProgress.removeAttribute('max');
+				}
+			},
+		}).then(() => {
+			setStatusMode('hidden');
+		}, displayFailureNotice);
+	}
 }());
-    </script>
-  </body>
+		</script>
+	</body>
 </html>
+
